--- a/webroot/assets/html/headers/events.html
+++ b/webroot/assets/html/headers/events.html
@@ -1,4 +1,4 @@
-<div id="page-header" class="page-header index60 full-screen table overlay">
+<div id="page-header" class="page-header background-freedom-hall full-screen table overlay">
     <div class="table-cell">
         <div class="container">
             <div class="row font-second">
