--- a/webroot/assets/html/pages/manage/home.html
+++ b/webroot/assets/html/pages/manage/home.html
@@ -1,9 +1,15 @@
+{nav}
 <div class="section home">
     <div class="container">
-        <div class="home-icon wow fadeInRight">
+        <div class="page-icon wow fadeInDown">
             <i class="icon-scope"></i>
         </div>
-        <div class="text-center wow fadeInLeft">
+        <div class="text-center form-title wow fadeInUp">
+            <h6>Welcome</h6>
+            <h1>{user-name}</h1>
+            <h6>{user-email}</h6>
+        </div>
+        <div class="text-center wow fadeInUp">
             <div class="pagination">
                 <a>{season}</a>
             </div>
@@ -74,7 +80,7 @@
                                 <button type="submit" class="btn btn-animated btn-contact ripple-alone btn-add" data-text="Add"><span class="btn-icon">
                                     <span class="loader-parent">
                                             <span class="loader3"></span>
-                                        </span>
+                                    </span>
                                     </span>
                                 </button>
                             </div>
