--- a/webroot/assets/html/pages/manage/login.html
+++ b/webroot/assets/html/pages/manage/login.html
@@ -1,12 +1,11 @@
 <div class="section login">
     <div class="container">
-
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
-                <div class="login-icon">
+                <div class="page-icon wow fadeInDown">
                     <i class="icon-scope"></i>
                 </div>
-                <form class="" name="login-form" method="post" action="manage/login">
+                <form class="wow fadeInUp" name="login-form" method="post" action="manage/login">
                     <fieldset>
                         <div class="row">
                             <div class="input col-xs-12 col-sm-12 padding-bottom-xs-50 padding-bottom-50">
